--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,6 +8,7 @@
         android:targetSdkVersion="15" />
 
     <application
+        android:name="com.example.tcc.GlobalStateApp"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
@@ -38,9 +39,18 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".CaseDetailsActivity"
+            android:label="@string/title_activity_case_details" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
-    
-     <!-- Allow to connect with internet -->
+
+    <!-- Allow to connect with internet -->
     <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
